--- a/pi_in_python.ipynb
+++ b/pi_in_python.ipynb
@@ -29,7 +29,9 @@
    "source": [
     "from decimal import Decimal as Dec, getcontext as gc\n",
     "\n",
-    "def PI(maxK=70, prec=1008, disp=1007): # parameter defaults chosen to gain 1000+ digits within a few seconds\n",
+    "def PI(maxK=70, prec=1008, disp=1007):\n",
+    "    # parameter defaults chosen to gain\n",
+    "    # 1000+ digits within a few seconds\n",
     "    gc().prec = prec\n",
     "    K, M, L, X, S = 6, 1, 13591409, 1, 13591409 \n",
     "    for k in range(1, maxK+1):\n",
@@ -40,8 +42,9 @@
     "        K += 12\n",
     "    pi = 426880 * Dec(10005).sqrt() / S\n",
     "    pi = Dec(str(pi)[:disp]) # drop few digits of precision for accuracy\n",
-    "    print(\"PI(maxK=%d iterations, gc().prec=%d, disp=%d digits) =\\n%s\" % (maxK, prec, disp, pi))\n",
-    "    return pi\n"
+    "    print(\"PI(maxK=%d iterations, gc().prec=%d, disp=%d digits) =\\n%s\" \\\n",
+    "          % (maxK, prec, disp, pi))\n",
+    "    return pi"
    ]
   },
   {
