--- a/pi_in_python.ipynb
+++ b/pi_in_python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Implementation of Pi Algorithms\n",
+    "# Python Implementations of Pi Algorithms\n",
     "# Collected and Organised by Yu Geng\n",
     "# Last Update: 2017-09-19\n",
     "Symbol $\\pi$ does not render in the correct font size on GitHub."
